--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,26 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>nl.geodienstencentrum.maven</groupId>
+                <artifactId>sass-maven-plugin</artifactId>
+                <version>3.7.2</version>
+                <configuration>
+                    <!-- using dedicated folders seems to work best with rebuild-required detection, at least when being a bit early to the party (i. e. in generate-resource phase) -->
+                    <sassSourceDirectory>${basedir}/src/main/resources/sass/</sassSourceDirectory>
+                    <destination>${basedir}/src/main/resources/compiled-css</destination>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>update-stylesheets</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>update-stylesheets</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        
         </plugins>
     </build>
 </project>
