--- a/common_library/tsconfig.json
+++ b/common_library/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "target": "es2015",
         "declaration": true,
-        "outDir": "./dist"
+        "outDir": "./lib"
     },
     "include": [
         "src/**/*"
