--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "bootstrap": "5.0.2",
     "common_library": "file:./../common_library",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
