create ipc handler

--- a/common_library/package.json
+++ b/common_library/package.json
@@ -10,7 +10,6 @@
         "/lib"
     ],
     "types": "./lib/index.d.ts",
-    "dependencies": {
-                
-    }
+    "dependencies": {},
+    "devDependencies": {}
 }
