--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "bootstrap": "5.0.2",
     "common_library": "file:./../common_library",
     "localforage": "^1.9.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
