--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,6 @@
     "localforage": "^1.9.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
-    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.1",
@@ -55,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
-    "electron": "^13.1.9"
+    "electron": "^13.1.9",
+    "sass": "1.51.0"
   }
 }
