--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "cross-env NODE_ENV=development && npm run build && electron ./dist/main.js"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
@@ -22,15 +22,18 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
     "@types/nedb": "^1.8.12",
+    "@types/node": "^16.4.7",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.28.4",
+    "cross-env": "^7.0.3",
     "electron": "^13.1.7",
     "eslint": "^7.32.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "common_library": "file:./common_library",
-    "jsstore": "^4.3.7",
+    "find-free-ports": "^3.0.0",
+    "get-port": "^5.1.1",
     "nedb": "^1.8.0",
     "simple-git": "^2.42.0"
   }
