--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A minimal Electron application written with Typescript",
   "scripts": {
     "build": "tsc",
+    "configure_dev": "cross-env-shell NODE_ENV=development FRONTEND_PORT=54533",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "cross-env NODE_ENV=development && npm run build && electron ./dist/main.js"
+    "start": "npm run build && electron ./dist/main.js"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
@@ -20,21 +21,24 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.12",
     "@types/nedb": "^1.8.12",
     "@types/node": "^16.4.7",
+    "@types/serve-handler": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.28.4",
-    "cross-env": "^7.0.3",
     "electron": "^13.1.7",
     "eslint": "^7.32.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
     "common_library": "file:./common_library",
+    "express": "^4.18.1",
     "find-free-ports": "^3.0.0",
     "get-port": "^5.1.1",
     "nedb": "^1.8.0",
+    "serve-handler": "^6.1.3",
     "simple-git": "^2.42.0"
   }
 }
