--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "electron-quick-start-typescript",
-  "version": "1.0.0",
-  "description": "A minimal Electron application written with Typescript",
+  "name": "gitstudio",
+  "version": "0.0.1",
+  "description": "A git gui application",
   "scripts": {
     "build": "tsc",
     "configure_dev": "cross-env-shell NODE_ENV=development FRONTEND_PORT=54533",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "npm run build && electron ./dist/main.js",
+    "package": "electron-builder build"
   },
-  "repository": "https://github.com/electron/electron-quick-start-typescript",
+  "main": "./dist/main.js",
   "keywords": [
     "Electron",
     "quick",
@@ -22,23 +23,93 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/fs-extra": "^9.0.12",
+    "@types/fs-extra": "^9.0.13",
     "@types/nedb": "^1.8.12",
     "@types/node": "^16.4.7",
     "@types/serve-handler": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.28.4",
     "electron": "^13.1.7",
+    "electron-builder": "^23.0.3",
     "eslint": "^7.32.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
     "common_library": "file:./common_library",
+    "electron-updater": "^5.0.1",
     "express": "^4.18.1",
     "find-free-ports": "^3.0.0",
+    "fs-extra": "^10.1.0",
     "get-port": "^5.1.1",
     "nedb": "^1.8.0",
     "serve-handler": "^6.1.3",
     "simple-git": "^2.42.0"
+  },
+  "build": {
+    "productName": "Git Studio",
+    "appId": "org.gitstudio.electron",
+    "asar": false,
+    "asarUnpack": "**\\*.{node,dll}",
+    "files": [
+      "dist/**/*",
+      "node_modules",
+      "package.json"
+    ],
+    "mac": {
+      "target": {
+        "target": "default",
+        "arch": [
+          "arm64",
+          "x64"
+        ]
+      },
+      "type": "distribution",
+      "hardenedRuntime": true,
+      "entitlements": "assets/entitlements.mac.plist",
+      "entitlementsInherit": "assets/entitlements.mac.plist",
+      "gatekeeperAssess": false
+    },
+    "dmg": {
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage"
+      ],
+      "category": "Development"
+    },
+    "directories": {
+      "app": ".",
+      "buildResources": "assets",
+      "output": "release/build"
+    },
+    "extraResources": [
+      "./assets/**"
+    ],
+    "publish": {
+      "provider": "github",
+      "owner": "tulshidas3",
+      "repo": "gitstudio"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tulshidas39/gitstudio.git"
   }
 }
