--- a/package.json
+++ b/package.json
@@ -12,21 +12,18 @@
   },
   "main": "./dist/main.js",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo",
-    "typescript"
+    "Git",
+    "gui",
+    "app",
+    "ui"
   ],
   "author": "GitHub",
-  "license": "CC0-1.0",
+  "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/nedb": "^1.8.12",
     "@types/node": "^16.4.7",
-    "@types/serve-handler": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.28.4",
     "electron": "^13.1.7",
@@ -38,11 +35,9 @@
     "common_library": "file:./common_library",
     "electron-updater": "^5.0.1",
     "express": "^4.18.1",
-    "find-free-ports": "^3.0.0",
     "fs-extra": "^10.1.0",
     "get-port": "^5.1.1",
     "nedb": "^1.8.0",
-    "serve-handler": "^6.1.3",
     "simple-git": "^2.42.0"
   },
   "build": {
@@ -51,7 +46,7 @@
     "asar": false,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
-      "dist/**/*",
+      "dist",
       "node_modules",
       "package.json"
     ],
