--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "bootstrap": "5.0.2",
-    "common_library": "file:./../common_library",
+    "common_library": "file:../common_library",
     "localforage": "^1.9.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
