--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "common_library": "file:./common_library",
+    "common_library": "file:common_library",
     "electron-updater": "^5.0.1",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
@@ -111,7 +111,7 @@
       "owner": "tulshidas39",
       "repo": "gitstudio"
     },
-    "artifactName":"Git-Studio-Setup-${os}-${arch}-${version}.${ext}"
+    "artifactName": "Git-Studio-Setup-${os}-${arch}-${version}.${ext}"
   },
   "repository": {
     "type": "git",
