--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "bootstrap": "5.0.2",
     "common_library": "file:../common_library",
+    "immer": "^9.0.14",
     "localforage": "^1.9.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
