--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lithiumgit",
-  "version": "0.0.1-beta.3",
+  "version": "0.0.2-alpha.1",
   "description": "A git gui application",
   "scripts": {
     "build": "tsc",
