--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "common_library": "file:common_library",
+    "detect-file-encoding-and-language": "^2.4.0",
     "electron-updater": "^5.0.1",
     "fs-extra": "^10.1.0",
     "nedb": "^1.8.0",
