--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lithiumgit",
-  "version": "0.5.2-alpha.1",
+  "version": "0.5.3-alpha.1",
   "description": "A git gui application",
   "scripts": {
     "build": "tsc",
@@ -12,7 +12,7 @@
     "build_common_library": "cd common_library && npm run build",
     "copy_files": "copyfiles -u 2 frontend/build/**/* dist/frontend",
     "build_all": "npm run build_frontend && npm run copy_files && npm run build",
-    "package": "npm run build_all && electron-builder build"
+    "package": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build"
   },
   "main": "./dist/main.js",
   "keywords": [
