--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "start": "npm run build && electron ./dist/main.js",
     "build_ui": "cd ui && npm run build",
     "build_common_library": "cd common_library && npm run build",
-    "copy_files": "copyfiles -u 2 ui/build/**/* dist/ui",
+    "copy_files": "copyfiles -u 2 \"ui/build/**/*\" dist/ui",
     "build_all": "npm run build_ui && npm run copy_files && npm run build",
-    "package": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build"
+    "package": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build",
+    "package-linux": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build --linux"
   },
   "main": "./dist/main.js",
   "keywords": [
@@ -21,7 +22,8 @@
     "app",
     "ui"
   ],
-  "author": "GitHub",
+  "author": "Tulshi Chandra Das <tulshidas37@gmail.com>",
+  "email": "tulshidas37@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -97,8 +99,9 @@
       "runAfterFinish": true
     },
     "linux": {
+      "icon": "icon.png",
       "target": [
-        "AppImage"
+        "AppImage","deb"
       ],
       "category": "Development"
     },
