update linux build

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "copy_files": "copyfiles -u 2 \"ui/build/**/*\" dist/ui",
     "build_all": "npm run build_ui && npm run copy_files && npm run build",
     "package": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build",
-    "package-linux": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build --linux",
+    "package-linux": "export NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build --linux",
     "package-mac": "export NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build --mac"
   },
   "main": "./dist/main.js",
@@ -103,10 +103,16 @@
     },
     "linux": {
       "icon": "icons/256x256.icns",
-      "target": [
-        "AppImage",
-        "deb"
-      ],
+      "target":[
+        {
+        "target":"AppImage",
+        "arch": ["ia32","x64"]
+        },
+        {
+          "target":"deb",
+          "arch": ["ia32","x64"]
+        }
+    ],
       "category": "Development"
     },
     "directories": {
