--- a/package.json
+++ b/package.json
@@ -103,16 +103,22 @@
     },
     "linux": {
       "icon": "icons/256x256.icns",
-      "target":[
+      "target": [
         {
-        "target":"AppImage",
-        "arch": ["ia32","x64"]
+          "target": "AppImage",
+          "arch": [
+            "ia32",
+            "x64"
+          ]
         },
         {
-          "target":"deb",
-          "arch": ["ia32","x64"]
+          "target": "deb",
+          "arch": [
+            "ia32",
+            "x64"
+          ]
         }
-    ],
+      ],
       "category": "Development"
     },
     "directories": {
