--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "common_library": "file:common_library",
     "detect-file-encoding-and-language": "^2.4.0",
     "electron-updater": "^5.0.1",
