implement is binary checker

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "detect-file-encoding-and-language": "^2.4.0",
     "electron-updater": "^5.0.1",
     "fs-extra": "^10.1.0",
+    "istextorbinary": "^9.5.0",
     "nedb": "^1.8.0",
     "simple-git": "3.10.0"
   },
