--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.7",
   "description": "A git gui application",
   "scripts": {
-    "prebuild": "node scripts/generateBuildInfo.js",
+    "genereate_build_info": "node scripts/generateBuildInfo.js",
     "build": "tsc && npm run copy_src_assets",
     "copy_src_assets": "copyfiles -u 2 \"src/icons/**/*\" dist/icons",
     "configure_dev": "cross-env-shell NODE_ENV=development ui_PORT=54533",
@@ -13,7 +13,7 @@
     "build_ui": "cd ui && npm run build",
     "build_common_library": "cd common_library && npm run build",
     "copy_files": "copyfiles -u 2 \"ui/build/**/*\" dist/ui",
-    "build_all": "npm run build_ui && npm run copy_files && npm run prebuild && npm run build",
+    "build_all": "npm run build_ui && npm run copy_files && npm run genereate_build_info && npm run build",
     "package": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build",
     "package-linux": "export NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build --linux",
     "package-mac": "export NODE_OPTIONS=--openssl-legacy-provider && npm run build_all && electron-builder build --mac"
