--- a/ui/package.json
+++ b/ui/package.json
@@ -20,7 +20,7 @@
     "react-bootstrap": "^2.10.10",
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.3",
-    "react-icons": "^5.5.0",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
@@ -52,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.97.2"
   }
 }
