--- a/package.json
+++ b/package.json
@@ -29,28 +29,24 @@
   "email": "tulshidas37@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/nedb": "^1.8.12",
     "@types/node": "^16.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.28.4",
     "copyfiles": "^2.4.1",
-    "electron": "^13.1.7",
-    "electron-builder": "^23.0.3",
-    "eslint": "^7.32.0",
-    "typescript": "^4.6.4"
+    "electron": "^39.2.7",
+    "electron-builder": "^26.4.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.13.2",
     "chardet": "^2.1.1",
     "common_library": "file:common_library",
     "detect-file-encoding-and-language": "^2.4.0",
-    "electron-updater": "^5.0.1",
-    "fs-extra": "^10.1.0",
+    "electron-updater": "^6.7.3",
+    "fs-extra": "^11.3.3",
     "istextorbinary": "^9.5.0",
     "nedb": "^1.8.0",
-    "simple-git": "3.10.0"
+    "simple-git": "^3.30.0"
   },
   "build": {
     "productName": "LithiumGit",
