--- a/ui/package.json
+++ b/ui/package.json
@@ -2,6 +2,7 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
     "@testing-library/dom": "^10.4.1",
@@ -22,7 +23,6 @@
     "react-dom": "^19.2.3",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
     "react-spinners": "^0.17.0",
@@ -30,6 +30,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start-linux": "export FAST_REFRESH=false && export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start-mac": "export FAST_REFRESH=false && export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
