--- a/ui/package.json
+++ b/ui/package.json
@@ -21,7 +21,7 @@
     "react-bootstrap": "^2.10.10",
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.3",
-    "react-icons": "^5.4.0",
+    "react-icons": "5.4.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
