--- a/common_library/package.json
+++ b/common_library/package.json
@@ -14,6 +14,7 @@
     ],
     "types": "./lib/index.d.ts",
     "dependencies": {
+        "moment": "^2.30.1",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
