--- a/common_library/tsconfig.json
+++ b/common_library/tsconfig.json
@@ -4,7 +4,8 @@
         "target": "es2015",
         "declaration": true,
         "outDir": "./lib",
-        "lib": ["ES2016"]
+        "lib": ["ES2016"],
+        "esModuleInterop":true,
     },
     "include": [
         "src/**/*"
